made clearRows to remove a completed row

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<title></title>
 </head>
 <body>
-	<canvas id="tetris" width = "1200" height = "2000"></canvas>
+	<div>
+		<canvas id="tetris" width = "600" height = "1000"></canvas>
+	</div>
 
 <script type="text/javascript" src="script.js"></script>
 </body>
