--- a/index.html
+++ b/index.html
@@ -2,13 +2,26 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title></title>
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<title>Tetris</title>
 </head>
 <body>
-	<div>
-		<canvas id="tetris" width = "600" height = "1000"></canvas>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm">
+				<canvas id="tetris" width = "600" height = "1000"></canvas>
+			</div>
+			<div class="col-sm">
+				<div class="time"></div>
+				<div class="score"></div>
+			</div>
 	</div>
 
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
