--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<title>Tetris</title>
 </head>
 <body>
+<!-- 	<div class="jumbotron">
+		<hi>Tetris game</hi>
+	</div> -->
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm">
 				<canvas id="tetris" width = "600" height = "1000"></canvas>
 			</div>
 			<div class="col-sm">
+				<button class="start">START</button>
 				<div class="time"></div>
 				<div class="score"></div>
 			</div>
