--- a/index.html
+++ b/index.html
@@ -3,24 +3,31 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<title>Tetris</title>
 </head>
 <body>
-<!-- 	<div class="jumbotron">
-		<hi>Tetris game</hi>
-	</div> -->
-	<div class="container-fluid">
+	<div class="container">
 		<div class="row">
-			<div class="col-sm">
+			<div class="head">
+				<div class="headings">TETRIS</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="tetrisCan">
 				<canvas id="tetris" width = "600" height = "1000"></canvas>
 			</div>
-			<div class="col-sm">
-				<button class="start">START</button>
-				<div class="time"></div>
-				<div class="score"></div>
-			</div>
+		</div>
+		<div class='row'>
+			<div class="time"></div>
+		</div>
+		<div class="row">
+			<button class="start btn btn-secondary btn-block">START</button>
+		</div>
+		<div class="row">
+			<div class="score"></div>
+		</div>
 	</div>
 
 
