--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 			<div class="score"></div>
 		</div>
 	</div>
-
+	<!-- The video -->
+	<video autoplay muted loop id="myVideo">
+	  <source src="video/tetris.mp4" type="video/mp4">
+	</video>
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
